# zephyr-start

./: .gitignore  CMakeLists.txt  Kconfig  new 3.txt  readme.md  west.yml
app/demos/bare_metal_direct/: CMakeLists.txt
app/demos/can_counter/: prj.conf
app/demos/direct_irq/: CMakeLists.txt
app/demos/ethernet_bridge/t1s_device/: CMakeLists.txt  Kconfig  VERSION  prj.conf  sections-rom.ld  sysbuild.conf
app/demos/ethernet_bridge/t1s_device/boards/: frdm_mcxa266.conf  frdm_mcxa266.overlay
app/demos/ethernet_bridge/t1s_device/src/: main.c
app/demos/ethernet_bridge/t1s_device/web/: index.html
app/demos/frdm_can_shell_monitor_cdc/: README.md  (+2 more)
app/demos/hello_zephyr/: CMakeLists.txt  hello_zephyr_ozone.jdebug
app/demos/hello_zephyr/boards/: frdm_mcxn947_mcxn947_cpu0.conf
app/hello_world/: ozone_mcxn947.jdebug
demos/bare_metal_direct/: prj.conf
demos/bunny_build/: CMakeLists.txt  prj.conf
demos/can_counter/: prj.conf
demos/dhcpv4_client/: ozone_rt.jdebug  prj.conf
demos/direct_irq/: CMakeLists.txt
demos/hello_rtt/: CMakeLists.txt  ozone.jdebug  prj.conf
demos/hello_zephyr/: Kconfig  hello_zephyr_ozone-mcxa156.jdebug  prj.conf
demos/i2c_shell/: prj.conf
demos/lan8651_t1s_demo/: README.md
demos/littlefs/: prj.conf
demos/lvgl/: CMakeLists.txt
demos/rw612-ble-shell/: prj.conf
demos/synchronization/: README.rst  mcxn947.jdebug  prj.conf
demos/z_for_each/: CMakeLists.txt  prj.conf
hello_world/: CMakeLists.txt  prj.conf
hello_world/src/: main.c
littlefs/: app.overlay  prj.conf
littlefs/src/: main.c
my_zephyr_app/src/: main.c  t2.c
(+84 files in other folders)
